<resources>
    <string name="app_name">Med Manager</string>
    <string name="title_activity_sign_in">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="search_hint">search medication by name</string>
    <string name="medication_name">Medication Name</string>
    <string name="description">Description</string>
    <string name="interval_no_of_times_a_day">Interval(No of times a day)</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="preferred_start_time">Preferred Start time</string>
    <string name="new_user">New User?</string>
    <string name="already_registered">Already Registered?</string>
    <string name="empty_cursoor_text">No medication added yet</string>
    <string name="times_a_day">times a day</string>
    <string name="days_remaining">days remaining</string>
    <string name="days_used">days used</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_text">Please Provide below your registered Email, Your passsword is gonna be sent there.</string>
    <string name="email">Email</string>
    <string name="reset">Reset</string>
    <string name="empty_text_in_search_activity">No Result Found</string>
    <string name="or_sign_in_with_google">or Sign in With Google</string>
    <string name="prompt_create_new_acct">No account yet? Create one</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_confirm_passsword">Confirm Passsword</string>
    <string name="sign_up">sign up</string>
    <string name="already_registered_sign_in">Already registered? Sign In</string>
    <string name="medications">medications</string>
    <string name="months">months</string>
    <string name="done">DONE</string>
    <string name="sign_out">Sign Out</string>
    <string name="remove_account">Remove Account</string>
    <string name="sort_by">Sort By</string>
    <string name="name_z_a">Name(Z - A)</string>
    <string name="name_a_z">Name(A - Z)</string>
    <string name="time_new_old">Time(new - old)</string>
    <string-array name="monthsList">
        <item>All</item>
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
</resources>
